Fix due date overflow [SCI-7649]

--- a/app/assets/stylesheets/experiment/table.scss
+++ b/app/assets/stylesheets/experiment/table.scss
@@ -380,7 +380,6 @@
       top: 0;
       visibility: hidden;
       width: 16px;
-      z-index: 999;
 
       &.open {
         visibility: visible;
